# tinyik

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py  tox.ini
tests/: test_core.py  test_optimizer.py  test_solver.py  test_visualizer.py  utils.py
tinyik/: __init__.py  component.py  core.py  optimizer.py  solver.py  visualizer.py
