[tool.poetry]
name = "tinyik"
version = "3.0.0"
description = "A tiny inverse kinematics solver"
license = "MIT"
authors = ["lanius <lanius@nirvake.org>"]
readme = "README.rst"
repository = "https://github.com/lanius/tinyik"

[tool.poetry.dependencies]
python = "^3.5"
autograd = "*"
scipy = "*"
open3d = {version = "^0.9.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"

[tool.poetry.extras]
viz = ["open3d"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
